dnl                                               -*- Autoconf -*-
dnl Process this file with autoconf to produce a configure script.

AC_INIT([Basic C Library],[1.0],[none],[libbcl])
AC_CONFIG_SRCDIR([exception.h])
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_AWK
AC_DISABLE_SHARED
AM_PROG_LIBTOOL

dnl Checks for header files
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

